Changer la formulation

--- a/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
+++ b/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
@@ -20,11 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Félicitation!\n",
+    "## Félicitations!\n",
     "\n",
-    "Alors, vous avez trouvé un nouveau travail... oh, attendez, vous avez deux offres d'emploi!?! Félicitations encore une fois!\n",
+    "Alors, vous avez trouvé un nouvel emploi... oh, attendez, vous avez deux offres d'emploi!?! Félicitations encore une fois!\n",
     "\n",
-    "Voyons les deux entreprises qui offrent le travail :"
+    "Examinons les deux entreprises qui proposent un emploi :"
    ]
   },
   {
@@ -40,19 +40,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les entreprises **Acme** et **Bigby**, qui sont des entreprises de fournitures électronique, vous offrent une position de vente.\n",
+    "Les entreprises **Acme** et **Bigby**, qui sont des entreprises de fournitures électroniques, vous proposent une poste de vendeur.\n",
     "\n",
     "**Quel emploi devriez-vous choisir?** Voyons combien chaque emploi vous paie.\n",
     "\n",
-    "1. Acme paie un salaire de base de 1200 $\\$$ ainsi que 3 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
-    "\n",
-    "    *Acme salaire* = 1200 + (*vents* - 1000) $\\times$ 0.03\n",
-    "    \n",
-    "2. En même temps, Bigby paie un salaire de base de 250 $\\$$ ainsi que 18 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
-    "    \n",
-    "    *Bigby salaire* = 250 + *vents* $\\times$ 0.18\n",
+    "1. Acme offre un salaire de base de 1200 $\\$$ par mois, ainsi qu'une commission de 3 \\% pour chaque vente de plus de 1000 $\\$$. \n",
+    "2. Bigby offre un salaire de base de 250 $\\$$ par mois, ainsi qu'une commission de 18 \\% pour chaque vente.\n",
     " \n",
-    "**Votre tâche:** Déterminez quel emploi vous paie le mieux."
+    " \n",
+    "**Votre tâche:** Déterminez quel emploi paie le mieux."
    ]
   },
   {
@@ -61,17 +57,19 @@
    "source": [
     "**Besoin d'un indice?**\n",
     "\n",
-    "Il est clair que votre salaire est déterminé par la quantité de ventes de chaque mois.\n",
+    "Il est clair que votre salaire est déterminé par la quantité de ventes à chaque mois.\n",
     "\n",
-    "Vous pouvez considérer des différents quantités des ventes et calculer combien vous allez recevoir dans les deux emplois avec les mêmes quantités des ventes. \n",
+    "Vous pouvez considérer différentes quantités de ventes et calculer combien vous allez recevoir dans les deux emplois avec les mêmes quantités de ventes. \n",
     "\n",
-    "Ce cahier de Jupyter peut interpréter des opérations mathématiques de base. Alors, nous pouvons taper les formules de salaire. \n",
+    "Ce cahier de Jupyter peut interpréter des opérations mathématiques de base. Alors, nous pouvons insérer les formules pour le salaire. \n",
     "\n",
-    "Acme paie un salaire de base de 1200 $\\$$ ainsi que 3 \\% pour les ventes. Nous pouvons écrire cette formule comme suit\n",
-    "$$ Acme\\ salaire = 1200 + .03*(ventes-1000). $$\n",
+    "Acme paie un salaire de base de 1200 $\\$$ ainsi que 3 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
     "\n",
-    "En même temps, Bigby paie un salaire de base de 250 $\\$$  ainsi que 18 \\% pour les ventes, Nous pouvons écrire cette formule comme suit\n",
-    "$$ Bigby\\ salaire = 250 + .18*ventes.$$"
+    "    *Acme salaire* = 1200 + (*vents* - 1000) $\\times$ 0.03\n",
+    "    \n",
+    "En même temps, Bigby paie un salaire de base de 250 $\\$$ ainsi que 18 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
+    "    \n",
+    "    *Bigby salaire* = 250 + *vents* $\\times$ 0.18"
    ]
   },
   {
@@ -82,7 +80,7 @@
     "\n",
     "Considérer l'exemple ci-dessous.\n",
     "\n",
-    "Nous commençons notre calcul sans aucune vente. Vous pouvez le faire dans votre tête, mais essayons-le sur Python. "
+    "Nous commençons notre calcul sans aucune vente. Vous pouvez le faire dans votre tête, mais essayons-le avec Python. "
    ]
   },
   {
@@ -99,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le calcul ci-dessus nous dit que pour zéro vente, Acme paie 1200 $\\$$ et Bigby paie 250 $\\$$. Alors, Acme paie mieux dans ce cas.\n",
+    "Le calcul ci-dessus nous dit que pour zéro vente, Acme paie 1200 $\\$$ et Bigby paie 250 $\\$$. Alors, Acme paie mieux dans ce cas-ci.\n",
     "\n",
     "Maintenant, nous essayons des ventes de 2000 $\\$$ "
    ]
@@ -120,7 +118,7 @@
    "source": [
     "C'est-à-dire que pour 2000 $\\$$ de ventes, Acme paie 1230 $\\$$ et Bigby paie 610 $\\$$. Alors, Acme paie mieux dans ce cas aussi.\n",
     "\n",
-    "Maintenant nous serons plus ambitieux. Combien sera votre salaire si vous avez des ventes de 10.000 $\\$$?"
+    "Maintenant nous serons plus ambitieux. Combien sera votre salaire si vous avez des ventes de 10 000 $\\$$?"
    ]
   },
   {
@@ -137,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quand nous avons 10.000 $\\$$ de ventes, Acme paie 1470 $\\$$ et Bigby paie 2050 $\\$$. Alors cette fois, Bigby paie mieux! "
+    "Quand nous avons 10 000 $\\$$ de ventes, Acme paie 1470 $\\$$ et Bigby paie 2050 $\\$$. Alors cette fois, Bigby paie mieux! "
    ]
   },
   {
@@ -146,12 +144,12 @@
    "source": [
     "## Comparaison graphique\n",
     "\n",
-    "Il semble que Bigby paie mieux que Acme quand vos ventes sont assez élevées. \n",
+    "Il semble que Bigby paie mieux que Acme, quand vos ventes sont assez élevées. \n",
     "\n",
-    "Nous allons tracer des courbes pour montrer ces tendances. Nous pouvons utiliser Python pour faire un graphique rapide avec quelques lignes de code comme suit.\n",
+    "Nous allons tracer des courbes pour montrer ces tendances. Nous pouvons utiliser Python pour faire un graphique rapide avec quelques lignes de code, comme suit.\n",
     "\n",
     "\n",
-    "Premièrement, nous chargeons quelques paquet logiciel pour tracer comme indiqué dans les trois lignes suivantes."
+    "Premièrement, nous chargeons quelques paquets de code pour tracer des graphiques, comme indiqué dans les trois lignes suivantes."
    ]
   },
   {
@@ -190,13 +188,13 @@
    "source": [
     "### Des commentaires sur le code\n",
     "\n",
-    "La variable **ventes** est une liste de valeurs possibles, de 0 à 10.000, qui est mis en place en utilisant la fonction de **linspace**.\n",
+    "La variable **ventes** est une liste de valeurs possibles, de 0 à 10 000, qui est mis en place en utilisant la fonction de **linspace**.\n",
     "\n",
     "La variable **bigby** est la même formule que celle utilisée ci-dessus qui ajoute 18 \\% des ventes au salaire de base de 250 $\\$$.\n",
     "\n",
-    "La variable **acme** est un peu plus compliquée. Nous utilisons la fonction de **maximum** pour nous assurer que notre commission s'applique seulment aux ventes qui dépassent 1000 $\\$$.\n",
+    "La variable **acme** est un peu plus compliquée. Nous utilisons la fonction de **maximum** pour nous assurer que notre commission s'applique seulement aux ventes qui dépassent 1000 $\\$$.\n",
     "\n",
-    "La commande **go.Figure** crée un diagramme de dispersion avec les données de **Acme**, qui est superposé à un second tracé des données de **Bigby**.\n",
+    "La commande **go.Figure** crée un diagramme de dispersion avec les données de **Acme**, qui est superposé à un deuxième tracé des données de **Bigby**.\n",
     "\n",
     "Dans ce diagramme, vous pouvez faire une panoramique ou un zoom sur les lignes pour examiner les données plus directement. "
    ]
@@ -213,7 +211,7 @@
     "\n",
     "Comment trouvons-nous ce point de bascule?\n",
     "\n",
-    "Une façon de le trouver est d'utiliser Python tout simplement. Entrez une valeur pour **ventes** dans le code ci-dessous en remplaçant le nombre 4000 par un nombre de votre choix. Essayer de trouver le nombre où les deux salaire sont égaux.\n"
+    "Une façon de le trouver est d'utiliser Python tout simplement. Entrez une valeur pour les **ventes** dans le code ci-dessous en remplaçant le nombre 4000 par un nombre de votre choix. Essayer de trouver le nombre où les deux salaire sont égaux.\n"
    ]
   },
   {
@@ -230,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✏️ **Exercice:** Double-cliquez sur cette cellule et entrez les valeurs des **ventes** que vous avez trouvées où le salaire est égal pour les deux entreprise. "
+    "✏️ **Exercice:** Double-cliquez sur cette cellule et entrez les valeurs des **ventes** que vous avez trouvées où le salaire est égal pour les deux entreprises. "
    ]
   },
   {
@@ -238,7 +236,7 @@
    "metadata": {},
    "source": [
     "## Le point de bascule avec des outils interactifs\n",
-    "Python vous permet de faire ce calcul automatiquement. Tapez dans la case ci-dessous pour computer le salaire de Acme et de Bigby. Essayez encore de trouver la valeur de **ventes** où les deux salaires sont égaux. **Une note**, Les expressions suivantes utilisent des fonctions lambda de Python et des widgets interactifs de Jupyter; Essayez ces liens pour en apprendre davantage sur [les fonctions de lambda](https://realpython.com/python-lambda/) et [les widgets](https://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html)."
+    "Python vous permet de faire ce calcul automatiquement. Tapez dans la case ci-dessous pour calculer le salaire de Acme et de Bigby. Essayez encore de trouver la valeur des **ventes** où les deux salaires sont égaux. **Une note**, Les expressions suivantes utilisent des fonctions lambda de Python et des widgets interactifs de Jupyter; Essayez ces liens pour en apprendre davantage sur [les fonctions de lambda](https://realpython.com/python-lambda/) et [les widgets](https://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html)."
    ]
   },
   {
@@ -272,20 +270,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✏️ **Exercice:** Double-cliquez sur cette cellule et entrez les valeurs des **ventes** que vous avez trouvées où le salaire est égal pour les deux entreprise. "
+    "✏️ **Exercice:** Double-cliquez sur cette cellule et entrez les valeurs des **ventes** que vous avez trouvées où le salaire est égal pour les deux entreprises. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le point de bascule par l'algèbra\n",
+    "## Le point de bascule par l'algèbre\n",
     "\n",
-    "Et une dernière solution : mettez les deux formules de salaire à égalité, et résolvez **ventes**.\n",
+    "Et une dernière solution : mettez les deux formules de salaire à égalité, et calculez les **ventes**.\n",
     "    \n",
     "$$ 1200 + .03\\times (ventes - 1000) = 250 + .18 \\times ventes.$$\n",
     "    \n",
-    "Qu'est-ce que vous avez trouvé pour **ventes**?\n",
+    "Qu'est-ce que vous avez trouvé pour les **ventes**?\n",
     "\n",
     "Si vous préférez **résoudre pour x**, essayez cette formule :\n",
     "\n",
@@ -313,15 +311,15 @@
     "\n",
     "**Exercice:** Combien devez-vous vendre pour recevoir au moins autant qu'un salaire minimum ?\n",
     "\n",
-    "C'est une question difficile et importante à résoudre avant d'accepter le nouvel emploi. vous devez considérer:\n",
+    "C'est une question difficile et importante à résoudre avant d'accepter le nouvel emploi. Vous devez considérer:\n",
     "- Quel est le salaire minimum dans votre région? \n",
     "- Combien d'heures travaillez-vous typiquement par an ?\n",
     "\n",
-    "Par exemple, en Alberta, le salaire minimun est de 15 $\\$$ l'heure. La majorité des gens travaillent environ 40 heures par semaine pendant 50 semaines par an, ce qui représente 2000 heures par an. \n",
+    "Par exemple, en Alberta, le salaire minimun est de 15 $\\$$ l'heure. La majorité des gens travaillent environ 40 heures par semaine pendant 50 semaines par an, ce qui représente 2000 heures dans une année. \n",
     "\n",
     "Cela représente un salaire annuel de 30 000 $\\$$ par an, ou 2 500 $\\$$ par mois.\n",
     "\n",
-    "$$ 2,500 = 30,000 \\div 12.$$"
+    "$$ 2 500 = 30 000 \\div 12.$$"
    ]
   },
   {
@@ -331,7 +329,7 @@
     "Le travail chez Bigby vous permet de gagner plus d'argent, alors nous allons découvrir combien de dollars de ventes chez Bigby sont nécessaires pour gagner le même salaire que le salaire minimum. \n",
     "\n",
     "En se rappelant que nos formules ci-dessus sont pour un salaire mensuel, nous résolvons :\n",
-    "$$ 2,500 = 250 + .18x.$$\n",
+    "$$ 2500 = 250 + .18x.$$\n",
     "\n",
     "**Exercice:** Que trouvez-vous pour la valeur de **x**?"
    ]
@@ -350,13 +348,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## évaluation de la faisabilité\n",
+    "## Évaluation de la faisabilité\n",
     "\n",
-    "Vous avez trouvé que $x$ est plus de $\\$$10.000 par mois. C'est-à-dire que vouz devrez vendre plus de cent vingt mille dollars d'électronique chaque année juste pour gagner le salaire minimum.\n",
+    "Vous avez trouvé que $x$ est plus de $\\$$10 000 par mois. C'est-à-dire que vouz devrez vendre plus de cent vingt mille dollars d'électroniques chaque année juste pour gagner le salaire minimum.\n",
     "\n",
     "Cela vous semble-t-il beaucoup à vendre ?\n",
     "\n",
-    "**Exercice:** Combien de ventes **par an** faut-il exactement pour gagner le salaire minimum par an en Alberta? "
+    "**Exercice:** Combien de ventes **par année** faut-il exactement pour gagner le salaire minimum pour un an en Alberta? "
    ]
   },
   {
@@ -376,12 +374,12 @@
    "source": [
     "## Travailler dur chez Acme\n",
     "\n",
-    "Il semble évident qu'Acme paie beaucoup moins que Bigby lorsque les ventes sont assez grandes. Nous allons le vérifier dans cet exercice.\n",
+    "Il semble évident qu'Acme paie beaucoup moins que Bigby lorsque le total des ventes est assez grand. Nous allons le vérifier dans cet exercice.\n",
     "\n",
     "**Exercice:** En suivant les calculs ci-dessus, combien de dollars de ventes sont nécessaires chez Acme pour correspondre au salaire minimum mensuel de 2500 $\\$$ ?\n",
     "\n",
-    "**Besoin d'un indice?** Essayer de résoudre cette équation pour **x** (et expliquez porquoi c'est celle que vouz voulez trouver):\n",
-    "$$ 2,500 = 1200 + .03(x-1000).$$"
+    "**Besoin d'un indice?** Essayer de résoudre cette équation pour **x** (et expliquez pourquoi c'est celle que vouz voulez trouver):\n",
+    "$$ 2500 = 1200 + .03(x-1000).$$"
    ]
   },
   {
@@ -445,7 +443,7 @@
     "\n",
     "- Nous avons appris que les emplois différents peuvent avoir des salaires différents.\n",
     "- En créant des formules de salaire, nous pouvons déterminer quel emploi paie le mieux.\n",
-    "- Nous pouvons comparer les salaires en utilisants des calculs individuels, en traçant les données ou en utilisant l'algèbre.\n",
+    "- Nous pouvons comparer les salaires en utilisant des calculs individuels, en traçant les données ou en utilisant l'algèbre.\n",
     "- Connaître le salaire minimum de votre province vous donne un point de comparaison et peut vous aider à viser plus haut."
    ]
   },
@@ -462,7 +460,7 @@
    "hash": "d1ca6d17674200220921376aaeb3d36cffe15ecab2470a9a5e7a456cdbf61425"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
