Mises à jour par Mahdi

--- a/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
+++ b/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
@@ -65,11 +65,11 @@
     "\n",
     "Acme paie un salaire de base de 1200 $\\$$ ainsi que 3 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
     "\n",
-    "    *Acme salaire* = 1200 + (*vents* - 1000) $\\times$ 0.03\n",
+    "$$ Acme\\ salaire = 1200 + (ventes - 1000) \\times 0.03 $$\n",
     "    \n",
     "En même temps, Bigby paie un salaire de base de 250 $\\$$ ainsi que 18 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
     "    \n",
-    "    *Bigby salaire* = 250 + *vents* $\\times$ 0.18"
+    "$$ Bigby\\ salaire = 250 + ventes \\times 0.18 $$"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "source": [
     "## Une autre province.\n",
     "\n",
-    "Quel est le salaire minimum dans votre province ? (Vous pouvez le chercher sur l'internet.) Par exemple, en Saskatchewan c'est 11 $\\$$ l'heure et en Ontario c'est 12 $\\$$ l'heure.  \n",
+    "Quel est le salaire minimum dans votre province ? (Vous pouvez le chercher sur l'internet.) Par exemple, en octobre 2021, en Saskatchewan est passé à 11.81 $\\$$ l'heure.\n",
     "\n",
     "**Exercice:** \n",
     "- En imitant les calculs ci-dessus, quel est le salaire minimum mensuel dans votre province ?\n",
