--- a/Mathématiques/FonctionsMathématiques/introduction-aux-fonctions-mathématiques.ipynb
+++ b/Mathématiques/FonctionsMathématiques/introduction-aux-fonctions-mathématiques.ipynb
@@ -15,9 +15,11 @@
    "source": [
     "## Une introduction aux fonctions en utilisant Python\n",
     "\n",
-    "En mathématiques, ainsi qu'en programmation, une fonction est une opération qui prend une entrée et produit une sortie.\n",
+    "En mathématiques, ainsi qu'en programmation, une fonction est une opération qui prend une entrée et retourner une sortie.\n",
     "\n",
-    "Par exemple, nous pourrions avoir une fonction qui prend un numéro d’entrée et ajoute 2 à celui-ci."
+    "Par exemple, nous pourrions avoir une fonction qui prend un numéro d’entrée et ajoute 2 à celui-ci.\n",
+    "\n",
+    "Cliquez sur la cellule de code suivante, puis cliquez sur le bouton `▶Run` pour exécuter le code."
    ]
   },
   {
@@ -30,18 +32,6 @@
     "    return x + 2\n",
     "\n",
     "print(ajouter_deux(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ajouter_deux(x):\n",
-    "    return x + 2\n",
-    "\n",
-    "print(ajouter_deux(6))"
    ]
   },
   {
@@ -60,8 +50,8 @@
     "def multiplier_par_trois(x):\n",
     "    return x * 3\n",
     "\n",
-    "print(multiplier_par_trois(5))\n",
-    "print(multiplier_par_trois(6))"
+    "print('5 x 3 =', multiplier_par_trois(5))\n",
+    "print('6 x 3 =', multiplier_par_trois(6))"
    ]
   },
   {
@@ -70,7 +60,7 @@
    "source": [
     "# Tracer la fonction\n",
     "\n",
-    "Nous pouvons ajouter quelques commandes qui nous permettront de tracer la ou les fonctions."
+    "Nous pouvons importer une bibliothèque, du code écrit par quelqu'un d'autre, pour tracer une fonction. Cette bibliothèque s'appelle [Plotly](https://plotly.com/python)."
    ]
   },
   {
@@ -79,18 +69,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
+    "import plotly.express as px\n",
+    "import numpy as np\n",
+    "x = np.linspace(0, 20, 20)\n",
+    "y = ajouter_deux(x)\n",
+    "px.scatter(x=x, y=y, title='Ajouter deux')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x = np.linspace(0,10)\n",
-    "plt.plot(ajouter_deux(x));"
+    "# Conclusion\n",
+    "\n",
+    "Nous pouvons utiliser des fonctions en Python pour effectuer des opérations mathématiques, et des bibliothèques de code comme Plotly pour tracer les fonctions."
    ]
   },
   {
@@ -103,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +109,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
