--- a/commencer.ipynb
+++ b/commencer.ipynb
@@ -21,10 +21,9 @@
     "\n",
     "Si vous avez déjà utilisé des cahiers Jupyter, n'hésitez pas à commencer le codage, mais sinon, les ressources de ce cahier devraient vous aider à démarrer. Dans les sections ci-dessous, vous trouverez des liens vers des exercices, des exemples de contenu et des tutoriels. Suivez nos étapes ci-dessous pour commencer!\n",
     "\n",
-    "\n",
     "# La première étape\n",
     "\n",
-    "Votre première tâche consiste à remplir votre répertoire personnel avec du contenu! Pour ce faire, vous pouvez cliquer sur [ce lien](https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/callysto/getting-started&branch=french_translation). Ce que fait ce lien remplit votre répertoire d'accueil avec les cahiers ci-dessous. Une fois cette étape terminée, vous aurez accès aux cahiers et pourrez cliquer et interagir avec eux."
+    "Votre première tâche consiste à remplir votre répertoire personnel avec du contenu! Pour ce faire, vous pouvez cliquer sur [ce lien](https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https://github.com/callysto/cahiers-de-programmes&branch=master&urlpath=notebooks/cahiers-de-programmes/commencer.ipynb&depth=1). Ce que fait ce lien remplit votre répertoire d'accueil avec les cahiers ci-dessous. Une fois cette étape terminée, vous aurez accès aux cahiers et pourrez cliquer et interagir avec eux."
    ]
   },
   {
@@ -37,39 +36,15 @@
     "\n",
     "Maintenant que vous avez un contenu de démarrage, n'hésitez pas à consulter les cahiers et les liens ci-dessous pour vous familiariser davantage avec la technologie Jupyter et Callysto.\n",
     "\n",
-    "## Guides tutoriels (Facultatif)\n",
-    "* [Guide de démarrage rapide pour cahier Jupyter](http://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/)\n",
-    "* [Cahier Jupyter: le guide définitif](https://www.datacamp.com/community/tutorials/tutorial-jupyter-notebook)\n",
-    "\n",
-    "\n",
     "## Les fondamentaux - Exercices pour commencer\n",
     "* [MarkDown - Découvrez comment utiliser les caheirs Jupyter pour la composition de documents](Tutoriels/markdown.ipynb)\n",
     "* [Latex - Apprenez à composer des équations à l'aide de latex dans les cahiers Jupyter](Tutoriels/LaTeX.ipynb)\n",
     "\n",
-    "\n",
-    "## Cahiers Callysto pour votre intérêt\n",
-    "\n",
-    "### Math\n",
-    "* [Réflexions](Mathématiques/Réflexions/réflexions.ipynb) - un exemple de [GeoGebra](https://www.geogebra.org/).\n",
-    "\n",
-    "### Science générale\n",
-    "* [Changement climatique](Science/changement-climatique.ipynb) - un exemple exploitant plusieurs sources de données ouvertes.\n",
-    "* [Mesure de la conductivité](Science/conductivité-électrique.ipynb) - un laboratoire de conduite qui intègre des données ouvertes.\n",
-    "\n",
-    "### Intérêt général\n",
-    "* [Analyse du produit intérieur brut par province](EtudesSociales/PIBProvincialParIndustrie/pib-provincial-par-industrie.ipynb) - exploration des données du PIB de Statistique Canada.\n",
-    "\n",
-    "### Série des données ouvertes\n",
-    "* [Introduction aux tutoriels sur les données ouvertes](Technologie/OpenDataExamples/Intro%20to%20open%20data.ipynb) - Une série de didacticiels pour vous familiariser avec les données ouvertes.\n",
-    "\n",
-    "### Modèles\n",
-    "* [Modèle de rapport de laboratoire en Science](Science/LabTemplates/Lab%20Report%20Template.ipynb)\n",
-    "* [Tutoriel de modèle de rapport de laboratoire de science](Science/LabTemplates/Lab%20Report%20Template%20Tutorial.ipynb)\n",
-    "* [Modèle de journal numérique](Technologie/Digital%20Journal/Summer%20Camp%20Digital%20Journal.ipynb) - Un modèle de journal numérique quotidien pour les jeunes participant aux camps d'été STEM.\n",
-    "\n",
+    "## Ressources Callysto\n",
+    "* [Callysto Learning Modules](https://www.callysto.ca/learning-modules/) (en anglais et en français)\n",
     "\n",
     "# Autres ressources\n",
-    "Il existe de nombreuses ressources pour vous familiariser avec l’écosystème Jupyter, une recherche sur Google (ou github) pour votre domaine d’intérêt et «Jupyter Notebook» sera souvent intéressant. Par exemple:\n",
+    "Il existe de nombreuses ressources pour vous familiariser avec l’écosystème Jupyter, une recherche sur Google (ou GitHub) pour votre domaine d’intérêt et «Jupyter Notebook» sera souvent intéressant. Par exemple (en anglais):\n",
     "\n",
     "* [Une galerie de cahiers Jupyter intéressants](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks)"
    ]
@@ -84,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -127,6 +102,11 @@
    "sourceLang": "en",
    "targetLang": "fr",
    "useGoogleTranslate": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
