--- a/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
+++ b/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
@@ -15,9 +15,32 @@
     "lang": "fr"
    },
    "source": [
-    "# Modèle de rapport de laboratoire\n",
+    "# Rapport de laboratoire : titre\n",
     " \n",
-    "Ceci est le modèle de rapport de laboratoire générique qui peut être personnalisé pour être utilisé avec les rapports de laboratoire de l'étudiant. Pour un tutoriel sur l'utilisation de certaines des fonctions utilisées ici, [cliquez sur ce lien] (Lab Report Template Tutorial.ipynb). Si c'est la première fois que vous utilisez le modèle, nous vous recommandons de lire le tutoriel avant d'aller plus loin."
+    "Nom et classe : \n",
+    "\n",
+    "\n",
+    "\n",
+    "## Le but\n",
+    "\n",
+    "\n",
+    "\n",
+    "## L'hypothèse\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Le matériel\n",
+    "\n",
+    "\n",
+    "\n",
+    "##  Les manipulations\n",
+    "1. \n",
+    "2. \n",
+    "3. \n",
+    "\n",
+    "## Les résultats\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -26,42 +49,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing our helper functions \n",
-    "from lab_template_helpers import easy_table, graph_table"
+    "# ajouter ou supprimer des noms de variables en dessous puis exécutez la cellule\n",
+    "colonnes = ['Variable1','Variable2','Variable3']\n",
+    "\n",
+    "import pandas as pd\n",
+    "import qgrid\n",
+    "dfb = pd.DataFrame(columns=colonnes)\n",
+    "dfb.loc[len(dfb.index)] = [0]*len(colonnes) # ajouter une ligne avec des valeurs par défaut\n",
+    "dfq = qgrid.QgridWidget(df=dfb, show_toolbar=True)\n",
+    "dfq"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
+   "metadata": {},
    "source": [
-    "# Contexte\n",
-    " \n",
-    " Décrivez le contexte et la motivation du laboratoire ici.\n",
-    " \n",
-    " # Procédure expérimentale\n",
-    " \n",
-    " Expliquez la procédure expérimentale ici.\n",
-    " \n",
-    " # Hypothèse de l'élève\n",
-    " \n",
-    " Demandez aux élèves d'expliquer leur hypothèse ici après avoir lu le contexte et la procédure expérimentale.\n",
-    " \n",
-    " # Questions pré-labo\n",
-    " \n",
-    " Si vous avez des questions avant le laboratoire, entrez-les ici.\n",
-    " \n",
-    " 1. Question 1\n",
-    " 2. Question 2\n",
-    " 3. Question 3.\n",
-    " 4. ...\n",
+    "## L'analyse\n",
     "\n",
-    "## Créer une table vide\n",
-    "\n",
-    "Vous pouvez créer et enregistrer un tableau vide ici.\n",
-    "\n",
-    "REMARQUE: Vous pouvez supprimer cette cellule une fois que vous avez créé le fichier ou demander aux étudiants de créer eux-mêmes leurs propres tableaux."
+    "\n"
    ]
   },
   {
@@ -70,83 +75,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "easy_table.create_table('data_table_file.csv')"
+    "titre_du_graphique = ''\n",
+    "variable_x = 'Variable1'\n",
+    "variable_y = 'Variable2'\n",
+    "\n",
+    "import plotly.express as px\n",
+    "df = dfq.get_changed_df()\n",
+    "fig = px.scatter(df, x=variable_x, y=variable_y, title=titre_du_graphique)\n",
+    "fig.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
-    "# Charger votre tableau créé"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "my_table = easy_table.load_table(\"data_table_file.csv\")\n",
-    "my_table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
-    "# Charger le CSV en ligne ou local\n",
-    "\n",
-    " Remarque: S'il s'agit d'un fichier local sur votre compte / le compte de votre étudiant, tapez simplement le chemin du fichier ci-dessous au lieu d'une URL."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "online_table = easy_table.load_table(\"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\", \n",
-    "                      external=True)\n",
-    "online_table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
-    "# Tracer un graphique des résultats du tableau"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_table.graph_from_table(online_table)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
-    "# Résultats et constatations des élèves\n",
-    "\n",
-    "## Discussion\n",
-    "\n",
-    "Tapez votre discussion de vos constatations et vos résultats ici.\n",
-    "\n",
-    "## Conclusion\n",
-    "\n",
-    "Tapez vos conclusions ici."
+    "## La conclusion\n",
+    "\n"
    ]
   },
   {
@@ -159,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -184,6 +128,11 @@
    "sourceLang": "en",
    "targetLang": "fr",
    "useGoogleTranslate": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
