--- a/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
+++ b/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
@@ -111,11 +111,12 @@
     "#!pip install qgrid --user --upgrade\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import qgrid\n",
+    "import ipydatagrid\n",
     "rows = ['Distilled Water', 'Tap Water', 'Salt Water', 'Vinegar']\n",
-    "columns = ['Reading 1', 'Reading 2', 'Notes']\n",
+    "columns = ['Reading 1', 'Reading 2']\n",
     "df = pd.DataFrame(index=rows, columns=columns)\n",
-    "data_entry_table = qgrid.QgridWidget(df=df, show_toolbar=True)\n",
+    "data_entry_table = ipydatagrid.DataGrid(dataframe=df, show_toolbar=True,editable=True,layout={'height':'200px','width':'500px'})\n",
+    "data_entry_table.auto_fit_columns = True\n",
     "data_entry_table"
    ]
   },
@@ -132,9 +133,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data_entry_table.get_changed_df()\n",
-    "data['Average'] = (data['Reading 1'].astype(int)+data['Reading 1'].astype(int))/1\n",
-    "data"
+    "data = df\n",
+    "data_entry_table.select(row1=0,column1=0,row2=3,column2=0,clear_mode='all')\n",
+    "data['Reading 1'] = data_entry_table.selected_cell_values\n",
+    "data_entry_table.select(row1=0,column1=1,row2=3,column2=1,clear_mode='all')\n",
+    "data['Reading 2'] = data_entry_table.selected_cell_values\n",
+    "data = data.replace('',np.nan)\n",
+    "\n",
+    "\n",
+    "if not data.isnull().values.any():\n",
+    "    data['Average'] = (data['Reading 1'].astype(int) + data['Reading 2'].astype(int))/ 2\n",
+    "    display(data)\n",
+    "else:\n",
+    "    data['Average'] = 0\n",
+    "    print('N’oubliez pas de saisir des données dans le tableau ci-dessus avant d’exécuter cette cellule.')\n"
    ]
   },
   {
@@ -242,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.3"
   },
   "nbTranslate": {
    "displayLangs": [
