--- a/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
+++ b/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
@@ -53,10 +53,12 @@
     "colonnes = ['Variable1','Variable2','Variable3']\n",
     "\n",
     "import pandas as pd\n",
-    "import qgrid\n",
+    "import ipydatagrid\n",
+    "import plotly.express as px\n",
+    "\n",
     "dfb = pd.DataFrame(columns=colonnes)\n",
     "dfb.loc[len(dfb.index)] = [0]*len(colonnes) # ajouter une ligne avec des valeurs par défaut\n",
-    "dfq = qgrid.QgridWidget(df=dfb, show_toolbar=True)\n",
+    "dfq = ipydatagrid.DataGrid(dataframe=dfb, show_toolbar=True,editable=True,layout={'height':'200px','width':'500px'})\n",
     "dfq"
    ]
   },
@@ -75,12 +77,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = dfb\n",
+    "dfq.select(row1=0,column1=0,row2=0,column2=2,clear_mode='all')\n",
+    "df.iloc[-1] = dfq.selected_cell_values\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "titre_du_graphique = ''\n",
     "variable_x = 'Variable1'\n",
     "variable_y = 'Variable2'\n",
     "\n",
-    "import plotly.express as px\n",
-    "df = dfq.get_changed_df()\n",
     "fig = px.scatter(df, x=variable_x, y=variable_y, title=titre_du_graphique)\n",
     "fig.show()"
    ]
@@ -117,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   },
   "nbTranslate": {
    "displayLangs": [
