--- a/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
+++ b/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
@@ -49,17 +49,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ajouter ou supprimer des noms de variables en dessous puis exécutez la cellule\n",
-    "colonnes = ['Variable1','Variable2','Variable3']\n",
+    "# Change, add, or remove variable names below, then run this cell to create your data table\n",
+    "columns = ['Variable1','Variable2','Variable3']\n",
     "\n",
     "import pandas as pd\n",
     "import ipydatagrid\n",
+    "import ipywidgets as ipw\n",
     "import plotly.express as px\n",
     "\n",
-    "dfb = pd.DataFrame(columns=colonnes)\n",
-    "dfb.loc[len(dfb.index)] = [0]*len(colonnes) # ajouter une ligne avec des valeurs par défaut\n",
+    "def add_row(x):\n",
+    "    grid = dfq.get_visible_data()\n",
+    "    extra_row = [0] * len(grid.columns)\n",
+    "    grid.loc[len(grid.index)] = extra_row\n",
+    "\n",
+    "    dfq.data = grid\n",
+    "\n",
+    "def remove_row(x):\n",
+    "    grid = dfq.get_visible_data()\n",
+    "    dfq.data = grid.drop(grid.tail(1).index)\n",
+    "    \n",
+    "dfb = pd.DataFrame(columns=columns)\n",
+    "dfb.loc[len(dfb.index)] = [0]*len(columns) # ajouter une ligne avec des valeurs par défaut\n",
     "dfq = ipydatagrid.DataGrid(dataframe=dfb, show_toolbar=True,editable=True,layout={'height':'200px','width':'500px'})\n",
-    "dfq"
+    "\n",
+    "button_add_row = ipw.Button(description=\"Ajouter une rangée\", \n",
+    "                            style=ipw.ButtonStyle(button_color='darkgreen'))\n",
+    "button_remove_row = ipw.Button(description=\"Supprimer la ligne\", \n",
+    "                               style=ipw.ButtonStyle(button_color='darkred'))\n",
+    "\n",
+    "button_add_row.on_click(add_row)\n",
+    "button_remove_row.on_click(remove_row)\n",
+    "\n",
+    "ipw.VBox([\n",
+    "    ipw.HBox([button_add_row,button_remove_row]),\n",
+    "    dfq\n",
+    "])"
    ]
   },
   {
@@ -77,9 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dfb\n",
-    "dfq.select(row1=0,column1=0,row2=0,column2=2,clear_mode='all')\n",
-    "df.iloc[-1] = dfq.selected_cell_values\n",
+    "df = dfq.get_visible_data()\n",
     "\n",
     "df"
    ]
