Corriger quelques petites erreurs

--- a/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
+++ b/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
@@ -73,8 +73,7 @@
     "* conductimètre\n",
     "* bouteille de lavage avec de l'eau distillée\n",
     "* grand bécher pour le rinçage / les déchets\n",
-    "* chlorure de sodium\n",
-    "* sucre\n",
+    "* sel\n",
     "* tissus\n",
     "\n",
     "Solutions:\n",
@@ -96,7 +95,7 @@
     "5. Répétez les étapes 1 à 4 avec des échantillons des autres solutions. Par exemple, prenez une cuillerée de sel et dissolvez-la dans l'eau. Après chaque mesure de conductivité, videz le bécher et rincez-le avec de l'eau distillée.\n",
     "6. Nettoyez quand vous avez terminé.\n",
     "\n",
-    "Sélectionnez la cellule de code suivante, puis cliquez sur le bouton `▶Run` pour afficher un tableau de données pour enregistrer vos observations. Si vous obtenez une erreur, supprimez le `#` de la première ligne de code et exécutez-le à nouveau. Double-cliquez sur les valeurs `nan` pour insérer vos propres observations."
+    "Sélectionnez la cellule de code suivante, puis cliquez sur le bouton `▶Run` pour afficher un tableau de données pour enregistrer vos observations. Double-cliquez sur les valeurs `nan` pour insérer vos propres observations."
    ]
   },
   {
@@ -108,14 +107,13 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install qgrid --user --upgrade\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import ipydatagrid\n",
-    "rows = ['Distilled Water', 'Tap Water', 'Salt Water', 'Vinegar']\n",
-    "columns = ['Reading 1', 'Reading 2']\n",
+    "rows = ['Eau distillée', 'Eau du robinet', 'Eau salée', 'Vinaigre']\n",
+    "columns = ['Valeur 1', 'Valeur 2']\n",
     "df = pd.DataFrame(index=rows, columns=columns)\n",
-    "data_entry_table = ipydatagrid.DataGrid(dataframe=df, show_toolbar=True,editable=True,layout={'height':'200px','width':'500px'})\n",
+    "data_entry_table = ipydatagrid.DataGrid(dataframe=df, show_toolbar=True, editable=True, layout={'height':'150px'})\n",
     "data_entry_table.auto_fit_columns = True\n",
     "data_entry_table"
    ]
@@ -135,18 +133,17 @@
    "source": [
     "data = df\n",
     "data_entry_table.select(row1=0,column1=0,row2=3,column2=0,clear_mode='all')\n",
-    "data['Reading 1'] = data_entry_table.selected_cell_values\n",
+    "data['Valeur 1'] = data_entry_table.selected_cell_values\n",
     "data_entry_table.select(row1=0,column1=1,row2=3,column2=1,clear_mode='all')\n",
-    "data['Reading 2'] = data_entry_table.selected_cell_values\n",
+    "data['Valeur 2'] = data_entry_table.selected_cell_values\n",
     "data = data.replace('',np.nan)\n",
     "\n",
-    "\n",
     "if not data.isnull().values.any():\n",
-    "    data['Average'] = (data['Reading 1'].astype(int) + data['Reading 2'].astype(int))/ 2\n",
+    "    data['Moyenne'] = (data['Valeur 1'].astype(int) + data['Valeur 2'].astype(int))/ 2\n",
     "    display(data)\n",
     "else:\n",
     "    data['Average'] = 0\n",
-    "    print('N’oubliez pas de saisir des données dans le tableau ci-dessus avant d’exécuter cette cellule.')\n"
+    "    print(\"N'oubliez pas de saisir des données dans le tableau ci-dessus avant d'exécuter cette cellule.\")"
    ]
   },
   {
@@ -198,14 +195,14 @@
    "source": [
     "rossdale = pd.read_html('http://apps.epcor.ca/DailyWaterQuality/Default.aspx?zone=Rossdale', header=0)[0]\n",
     "els = pd.read_html('http://apps.epcor.ca/DailyWaterQuality/Default.aspx?zone=ELS', header=0)[0]\n",
-    "import cufflinks as cf\n",
-    "cf.go_offline()\n",
+    "import plotly.express as px\n",
     "combined_data = pd.DataFrame()\n",
     "combined_data['Rossdale'] = rossdale.iloc[6][1:]\n",
     "combined_data['ELS'] = els.iloc[6][1:]\n",
     "for i, row in data.iterrows():\n",
-    "    combined_data[row.name] = row['Average']\n",
-    "combined_data.iplot(yTitle='Conductivité (yS/cm)', title=\"Conductivité des solutions par rapport aux données des usines de traitement d'eau\")"
+    "    combined_data[row.name] = row['Moyenne']\n",
+    "fig = px.line(combined_data.astype(float), x=combined_data.index, y=combined_data.columns, title=\"Conductivité des solutions par rapport aux données des usines de traitement d'eau\")\n",
+    "fig.update_layout(xaxis_title='Date', yaxis_title='Conductivité (yS/cm)').show()"
    ]
   },
   {
@@ -216,8 +213,7 @@
    "source": [
     "## Question\n",
     "\n",
-    "4.\n",
-    "Comment se comparent vos valeurs? Qu'en est-il de l'eau qui quitte la station d'épuration des eaux de Rossdale?"
+    "4. Comment se comparent vos valeurs? Qu'en est-il de l'eau qui quitte la station d'épuration des eaux de Rossdale?"
    ]
   },
   {
@@ -254,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   },
   "nbTranslate": {
    "displayLangs": [
