Déplacer auto_fit_columns

--- a/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
+++ b/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
@@ -113,8 +113,7 @@
     "rows = ['Eau distillée', 'Eau du robinet', 'Eau salée', 'Vinaigre']\n",
     "columns = ['Valeur 1', 'Valeur 2']\n",
     "df = pd.DataFrame(index=rows, columns=columns)\n",
-    "data_entry_table = ipydatagrid.DataGrid(dataframe=df, show_toolbar=True, editable=True, layout={'height':'150px'})\n",
-    "data_entry_table.auto_fit_columns = True\n",
+    "data_entry_table = ipydatagrid.DataGrid(dataframe=df, show_toolbar=True, editable=True, layout={'height':'150px'}, auto_fit_columns=True)\n",
     "data_entry_table"
    ]
   },
