Quelques petites modifications

--- a/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
+++ b/Science/RapportDeLaboratoire/rapport-de-laboratoire.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "## Les résultats\n",
     "\n",
-    "\n"
+    "Modifiez, ajoutez ou supprimez des noms de variables dans la première ligne de la cellule de code ci-dessous, puis exécutez la cellule pour créer votre table de données."
    ]
   },
   {
@@ -49,7 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change, add, or remove variable names below, then run this cell to create your data table\n",
     "columns = ['Variable1','Variable2','Variable3']\n",
     "\n",
     "import pandas as pd\n",
@@ -57,33 +56,27 @@
     "import ipywidgets as ipw\n",
     "import plotly.express as px\n",
     "\n",
-    "def add_row(x):\n",
-    "    grid = dfq.get_visible_data()\n",
+    "def ajouter_ligne(x):\n",
+    "    grid = grille_donnees.get_visible_data()\n",
     "    extra_row = [0] * len(grid.columns)\n",
     "    grid.loc[len(grid.index)] = extra_row\n",
+    "    grille_donnees.data = grid\n",
     "\n",
-    "    dfq.data = grid\n",
-    "\n",
-    "def remove_row(x):\n",
-    "    grid = dfq.get_visible_data()\n",
-    "    dfq.data = grid.drop(grid.tail(1).index)\n",
+    "def supprimer_ligne(x):\n",
+    "    grid = grille_donnees.get_visible_data()\n",
+    "    grille_donnees.data = grid.drop(grid.tail(1).index)\n",
     "    \n",
     "dfb = pd.DataFrame(columns=columns)\n",
     "dfb.loc[len(dfb.index)] = [0]*len(columns) # ajouter une ligne avec des valeurs par défaut\n",
-    "dfq = ipydatagrid.DataGrid(dataframe=dfb, show_toolbar=True,editable=True,layout={'height':'200px','width':'500px'})\n",
+    "grille_donnees = ipydatagrid.DataGrid(dataframe=dfb, show_toolbar=True, editable=True, auto_fit_columns=True)\n",
     "\n",
-    "button_add_row = ipw.Button(description=\"Ajouter une rangée\", \n",
-    "                            style=ipw.ButtonStyle(button_color='darkgreen'))\n",
-    "button_remove_row = ipw.Button(description=\"Supprimer la ligne\", \n",
-    "                               style=ipw.ButtonStyle(button_color='darkred'))\n",
+    "bouton_ajouter_ligne = ipw.Button(description=\"ajouter une ligne\", style=ipw.ButtonStyle(button_color='darkgreen'))\n",
+    "bouton_supprimer_ligne = ipw.Button(description=\"supprimer une ligne\", style=ipw.ButtonStyle(button_color='darkred'))\n",
     "\n",
-    "button_add_row.on_click(add_row)\n",
-    "button_remove_row.on_click(remove_row)\n",
+    "bouton_ajouter_ligne.on_click(ajouter_ligne)\n",
+    "bouton_supprimer_ligne.on_click(supprimer_ligne)\n",
     "\n",
-    "ipw.VBox([\n",
-    "    ipw.HBox([button_add_row,button_remove_row]),\n",
-    "    dfq\n",
-    "])"
+    "ipw.VBox([ipw.HBox([bouton_ajouter_ligne,bouton_supprimer_ligne]), grille_donnees])"
    ]
   },
   {
@@ -101,23 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dfq.get_visible_data()\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "titre_du_graphique = ''\n",
     "variable_x = 'Variable1'\n",
     "variable_y = 'Variable2'\n",
     "\n",
-    "fig = px.scatter(df, x=variable_x, y=variable_y, title=titre_du_graphique)\n",
-    "fig.show()"
+    "df = grille_donnees.get_visible_data()\n",
+    "px.scatter(df, x=variable_x, y=variable_y, title=titre_du_graphique)"
    ]
   },
   {
